--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Adam Belajar HTML</title>
+</head>
+<body>
+	<h1>Ogutadam Project</h1>
+	<p>by</p>
+	<ul>
+		<li>ADAM RIANSAH</li>
+		<li>NIM 43210054</li>
+	</ul>
+
+</body>
+</html>
