update kode HTML - tambah NIM + Nama

--- a/index.html
+++ b/index.html
@@ -6,12 +6,61 @@
 	<title>Adam Belajar HTML</title>
 </head>
 <body>
-	<h1>Ogutadam Project</h1>
-	<p>by</p>
-	<ul>
-		<li>ADAM RIANSAH</li>
-		<li>NIM 43210054</li>
-	</ul>
-
+	<h1><p align="center">Ogutadam Project</h1>
+	<h2><p align="center"> ADAM RIANSAH</h2>
+	<h3><p class="dotted">NIM 43210054<p align="center"></h2>
+		<b><p align="center">NIM 43210054</p>
 </body>
+<p align="center"><img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
 </html>
+
+<style type="text/css">
+	h1{color: skyblue;
+	column-rule-color: 0.3;
+	transition: 0.2;
+}
+
+p.dotted {outline-style: dotted;}
+h1:hover{
+	background-color: skyblue;
+	text-align: center;
+	padding: 24px 0;
+	border-radius: 24px;
+}
+
+h2{
+	color: white;
+	background: orangered;
+}
+
+h3{
+	color: white;
+}
+
+img{
+	width: 6cm;
+	border-radius: 50%;
+	box-shadow: 4px 4px 8px lightgreen;
+	padding: 5px;
+	background: white;
+	margin: 15px;
+	transition: 0.5s;
+	opacity: 90%;
+	
+}
+
+img:hover{
+	transform: scale(1.2);
+	opacity: 100%;
+	box-shadow: 1px 1px 6px red;
+}
+
+body {
+	background-image: url(https://i.postimg.cc/RhmGpSp4/foto-galaxy.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+
+}
+
+</style>
