update kode HTML - tambah NIM + Nama

--- a/index.html
+++ b/index.html
@@ -3,15 +3,67 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Adam Belajar HTML</title>
+	<title>Ogutadam Project</title>
 </head>
 <body>
+	<div class="profile">
+		<p>MY PROFILE</p>
+		<img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
+		<h1>ADAM RIANSAH</h1>
+		<h2>STUDENT OF STMIK IKMI CIREBON</h2>
+		
+	</div>
 
 </body>
 </html>
 
+
+
 <style type="text/css">
 	body{
-		background-color: slateblue;
+		background-image: url(https://i.postimg.cc/dtR9cpSW/foto-astronot.jpg);
+		background-size: cover;
+	}
+
+	.profile p{
+		text-align: center;
+		color: white;
+		font-weight: bold;
+
+
+	}
+
+	.profile{
+		width: 350px;
+		height: 450px;
+		background: rgba(0, 0, 0, 0.7);
+		margin: 30px auto;
+	}
+
+	.profile img{
+		width: 140px;
+		height: 140px;
+		border-radius: 50%;
+		margin-left: 100px;
+		margin-top: 10px;
+	}
+
+	.profile h1{
+		text-align: center;
+		color: white;
+		font-weight: bold;
+		font-size: 30px;
+		background-color: blue;
+		border-radius: 10%;
+		background-size: 20px;
+
+	}
+
+	.profile h2{
+		text-align: center;
+		color: white;
+		font-weight: bold;
+		font-size: 15px;
+		margin: -20px;
 	}
 </style>
