--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
 		<h1>ADAM RIANSAH</h1>
 		<h2>STUDENT OF STMIK IKMI CIREBON</h2>
+		<h3>NIM 43210054 - SI SORE 2021</h3>
+		<h4 align="center">"Manusia pemberani bukanlah seseorang yang tak pernah merasa takut, tetapi seseorang yang takut pada hal-hal yang seharusnya, pada waktu yang tepat, dengan cara yang benar."</h4>
 		
 	</div>
 
@@ -38,6 +40,9 @@
 		height: 450px;
 		background: rgba(0, 0, 0, 0.7);
 		margin: 30px auto;
+		box-shadow: 1px 1px 4px hotpink;
+		padding: 7px;
+		transition: 0.2;
 	}
 
 	.profile img{
@@ -46,16 +51,21 @@
 		border-radius: 50%;
 		margin-left: 100px;
 		margin-top: 10px;
-	}
+		padding: 5px;
+		transition: 0.2s;
+		opacity: 80%;
+		box-shadow: 2px 2px 6px deeppink;
+ 	}
 
 	.profile h1{
 		text-align: center;
 		color: white;
 		font-weight: bold;
 		font-size: 30px;
-		background-color: blue;
-		border-radius: 10%;
+		background-color: hotpink;
+		border-right: blueviolet;
 		background-size: 20px;
+		background-blend-mode: multiply;
 
 	}
 
@@ -64,6 +74,27 @@
 		color: white;
 		font-weight: bold;
 		font-size: 15px;
-		margin: -20px;
+		margin: -10px;
+	}
+
+	.profile h3{
+		text-align: center;
+		color: white;
+		font-weight: bold;
+		font-size: 10px;
+		letter-spacing: 1px;
+	}
+
+	.profile h4{
+		width: 315px;
+		height: 92px;
+		background: hotpink;
+		margin: 30px auto;
+		opacity: 70%;
+		color: black;
+		margin-top: px;
+		background-position: bottom 50px;
+		background-size: cover;
+		box-shadow: 1px 1px 4px whitesmoke;
 	}
 </style>
