update kode HTML - tambah NIM + Nama

--- a/index.html
+++ b/index.html
@@ -3,124 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ogutadam Project</title>
+	<title>ogutadam bljr</title>
 </head>
 <body>
-	<div class="profile">
-		<p>MY PROFILE</p>
-		<img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
-		<h1>ADAM RIANSAH</h1>
-		<h2>STUDENT OF STMIK IKMI CIREBON</h2>
-		<h3>NIM 43210054 - SI SORE 2021</h3>
-		<h4 align="center">"Manusia pemberani bukanlah seseorang yang tak pernah merasa takut, tetapi seseorang yang takut pada hal-hal yang seharusnya, pada waktu yang tepat, dengan cara yang benar."</h4>
-		
-	</div>
+	<div class+="profil"
+	<p>my profile</p>
+</div>
 
 </body>
 </html>
-
-
-
-<style type="text/css">
-	body{
-		background-image: url(https://i.postimg.cc/dtR9cpSW/foto-astronot.jpg);
-		background-size: cover;
-	}
-
-	.profile p{
-		text-align: center;
-		color: white;
-		font-weight: bold;
-
-
-	}
-
-	.profile{
-		width: 350px;
-		height: 450px;
-		background: rgba(0, 0, 0, 0.7);
-		margin: 30px auto;
-		box-shadow: 1px 1px 4px hotpink;
-		padding: 7px;
-		transition-property: widht;
-
-	}
-
-	.profile img {
-		width: 140px;
-		height: 140px;
-		border-radius: 50%;
-		margin-left: 100px;
-		margin-top: 10px;
-		padding: 5px;
-		transition: 0.2s;
-		opacity: 80%;
-		box-shadow: 2px 2px 6px deeppink;
- 	}
-
- 	.profile img :hover{
- 		color: white;
-		transition: 0.5s;
-		text-shadow:
-		 0 0 10px skyblue,
-		 0 0 20px skyblue,
-		 0 0 40px skyblue;
-		 transform: scale(1.5);
-		 opacity: 100%;
-		 letter-spacing: 0.5;
-
- 	}
-
-	.profile h1{
-		text-align: center;
-		color: black;
-		font-weight: bold;
-		font-size: 30px;
-		background-color: hotpink;
-		border-right: blueviolet;
-		background-size: 20px;
-		background-blend-mode: multiply;
-
-	}
-
-	.profile h1:hover{
-		color: white;
-		transition: 0.5s;
-		text-shadow:
-		 0 0 10px skyblue,
-		 0 0 20px skyblue,
-		 0 0 40px skyblue;
-		 transform: scale(1.5);
-		 opacity: 100%;
-		 letter-spacing: 0.5;
-	}
-
-	.profile h2{
-		text-align: center;
-		color: white;
-		font-weight: bold;
-		font-size: 15px;
-		margin: -10px;
-	}
-
-	.profile h3{
-		text-align: center;
-		color: white;
-		font-weight: bold;
-		font-size: 10px;
-		letter-spacing: 1px;
-	}
-
-	.profile h4{
-		width: 315px;
-		height: 92px;
-		background: hotpink;
-		margin: 30px auto;
-		opacity: 70%;
-		color: black;
-		margin-top: px;
-		background-position: bottom 50px;
-		background-size: cover;
-		box-shadow: 1px 1px 4px whitesmoke;
-	}
-</style>
