Update kode HTML - tambah Nim + Nama

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Ogutadam Project</title>
+</head>
+<body>
+	<h1>MY PROFILE</h1>
+
+</body>
+</html>
