--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
 		<h1>ADAM RIANSAH</h1>
 		<h2>STUDENT OF STMIK IKMI CIREBON</h2>
-		<h3>NIM 43210054 - SI SORE 2021</h3>
+		<h3>NIM 43210054 - percobaan</h3>
 		<h4 align="center">"Manusia pemberani bukanlah seseorang yang tak pernah merasa takut, tetapi seseorang yang takut pada hal-hal yang seharusnya, pada waktu yang tepat, dengan cara yang benar."</h4>
 		
 	</div>
