--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 	<div class="profile">
 		<p>MY PROFILE</p>
 		<img src="https://i.postimg.cc/cC2dW3QQ/foto-aing.jpg">
-		<h1>ADAM skommo</h1>
-		<h2>STUDENT OF STMIK grab on road</h2>
-		<h3>NIM 43210054 - percobaan</h3>
+		<h1>ADAM RIANSAH</h1>
+		<h2>STUDENT OF STMIK IKMI</h2>
+		<h3>NIM 43210054 - SI SORE 2021<h3>
 		<h4 align="center">"Manusia pemberani bukanlah seseorang yang tak pernah merasa takut, tetapi seseorang yang takut pada hal-hal yang seharusnya, pada waktu yang tepat, dengan cara yang benar."</h4>
-		
+
+		<a href="pages/about.html">About</a> |
+		<a href="pages/service.html">Service</a> |
+		<a href="pages/contact.html">Contact</a> |
+		<a href="pages/bestie.html">Bestie</a> |
+
 	</div>
+
 
 </body>
 </html>
