--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a onclick="alert('Mau liat 5 kawan terbaik saya? klik OK')" href="p03css/tabel-2.html" class="tombol">Top 5 Kawan</a>
         <a onclick="alert('Mau liat 10 kawan JQuery terbaik saya? klik OK')" href="p03jquery/tabel-3.html" class="tombol">10 Kawan Jquery</a>
         <br><br><br>
-        <a onclick="alert('Mau liat 10 kawan terbaik saya? klik OK')" href="p03from-lv1/from.html" class="tombol">P04 Formulir Level #3 Responsive-CSS HTML Form</a>
+        <a onclick="alert('Untuk membuka formulir #3 klik OK')" href="p03from-lv1/from.html" class="tombol">P04 Formulir Level #3 Responsive-CSS HTML Form</a>
 
         <script>
             $(document).ready(function()){
