--- a/p03from-lv1/from.html
+++ b/p03from-lv1/from.html
@@ -23,13 +23,13 @@
 					<th align="left" valign="top" width="5">1.</th>
 					<th align="left" valign="top">Nomor Pendaftaran</th>
 					<td valign="top">:</td>
-					<td valign="top"><input type="text" name="nomor_pendaftaran" maxlength="12"></td>
+					<td valign="top"><input type="text" name="nomor_pendaftaran" maxlength="40"></td>
 				</tr>
 				<tr>
 					<th align="left">2.</th>
 					<th align="left">Nama Lengkap</th>
 					<td>:</td>
-					<td><input type="text" name="nama_lengkap" maxlength="30"></td>
+					<td><input type="text" name="nama_lengkap" maxlength="40"></td>
 				</tr>
 				<tr>
 					<th align="left">3.</th>
@@ -42,8 +42,8 @@
 					<th align="left" valign="top">Jenis Kelamin</th>
 					<td valign="top">:</td>
 					<td>
-						<input type="radio"  value="Laki-laki"> Laki-laki <br>
-						<input type="radio"  value="Perempuan"> Perempuan
+						<input type="radio"  value="Laki-laki"> Perempuan <br>
+						<input type="radio"  value="Perempuan"> Laki - laki
 					</td>
 				</tr>
 				<tr>
@@ -81,13 +81,13 @@
 				<tr>
 				<th>S1 (SARJANA 1)</th>
 				<td>
-					<input type="radio" name="jenjang" value="Akuntansi R_S1"> Akuntansi <br>
-					<input type="radio" name="jenjang" value="Manajemen R_S1"> Manajemen
+					<input type="radio" name="jenjang" value="Sistem Informasi R_S1"> Sistem Informasi <br>
+					<input type="radio" name="jenjang" value="Teknik Informasi R_S1"> Teknik Informasi
 				</td>
 				
 				<td>
-					<input type="radio" name="jenjang" value="Akuntansi K_S1 "> Akuntansi <br>
-					<input type="radio" name="jenjang" value="Manajemen K_S1 "> Manajemen
+					<input type="radio" name="jenjang" value="Sistem Informasi R_S1"> Sistem Informasi <br>
+					<input type="radio" name="jenjang" value="Teknik Informasi R_S1"> Teknik Informasi
 				</td>
 				</tr>
 			</tbody>
